--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -18,7 +18,9 @@
             <!-- Breadcrumb -->
             <nav class="breadcrumb">
                 <a href="/" class="breadcrumb-item">Home</a>
-                <span class="breadcrumb-separator">></span>
+                <span class="breadcrumb-separator">
+                    <img src="/assets/images/breadcrumb-arrow.svg" alt="Breadcrumb Arrow">
+                </span>
                 <span class="breadcrumb-item active">Profile</span>
             </nav>
 
