--- a/views/add_treatment_plan.ejs
+++ b/views/add_treatment_plan.ejs
@@ -91,7 +91,7 @@
     <script>
         // Load navigation rail component
         document.addEventListener('DOMContentLoaded', () => {
-            loadComponent('navRail', '/views/components/side-menu.html');
+            loadComponent('navRail', '/views/components/side-menu.ejs');
         });
 
         // File upload functionality
