--- a/views/components/side-menu.ejs
+++ b/views/components/side-menu.ejs
@@ -40,13 +40,13 @@
 
             <!-- User Management -->
             <div class="nav-item">
-                <a class="rail-btn" href="/users" title="User Management">
+                <a class="rail-btn" href="/user-management" title="User Management">
                     <img src="/assets/images/user-management-icon.svg" alt="Users" class="icon-default" />
                     <img src="/assets/images/user-management-icon-hover.svg" alt="Users" class="icon-hover" />
                     <span class="btn-text">User Management</span>
                 </a>
                 <div class="nav-dropdown">
-                    <a href="/users" class="menu-item">Manage Users</a>
+                    <a href="/user-management" class="menu-item">Manage Users</a>
                 </div>
             </div>
         </nav>
