--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -133,40 +133,51 @@ body {
   background: rgba(255, 255, 255, 0.4);
   backdrop-filter: blur(20px);
   border-radius: 16px;
-  padding: 2rem;
-  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
-  border: 1px solid rgba(255, 255, 255, 0.2);
-  max-width: 400px;
+  padding: 32px 48px;
+  max-width: 361px;
+  /* max-height: 408px; */
   width: 100%;
+  background: var(--Colour-background-surface-container, rgba(255, 255, 255, 0.40));
 }
 
 .login-form-content {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  /* gap: 2rem; */
 }
 
 /* Title */
 .title {
-  font-size: 28px;
-  font-weight: 700;
+  color: var(--Colour-text-subtle, #333);
   text-align: center;
-  color: #333;
-  margin-bottom: 1rem;
+
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 32px;
+  letter-spacing: 0.56px;
+  margin-bottom: 48px;
 }
 
 /* Form */
 .login-form {
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
+  /* gap: 24px;  */
 }
 
 .form-group {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  margin-bottom: 0.5rem;
+}
+
+.form-group:first-of-type {
+  margin-bottom: 24px;
+}
+
+.form-group:nth-of-type(2) {
+  margin-bottom: 16px;
 }
 
 .form-label {
@@ -224,7 +235,7 @@ body {
 .help-tooltip {
   position: absolute;
   bottom: 100%;
-  left: 50%;
+  left: 63.5%;
   transform: translateX(-91%) translateY(5px) !important;
   background: #333333;
   border-radius: 8px;
@@ -278,10 +289,10 @@ body {
 .form-input {
   width: 100%;
   height: 44px;
-  padding: 0 16px;
-  border: 1px solid #e8f3ff;
+  padding: 8px 16px;
   border-radius: 8px;
-  background: rgba(255, 255, 255, 0.6);
+  border: 1px solid var(--Colour-border-input, #E8F3FF);
+  background: var(--Colour-background-input-default, rgba(255, 255, 255, 0.60));
   font-size: 14px;
   font-weight: 500;
   color: #333;
@@ -331,7 +342,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 0.5rem;
+  margin-bottom: 48px; 
 }
 
 .checkbox-container {
@@ -397,7 +408,6 @@ body {
   border-radius: 8px;
   cursor: pointer;
   transition: all 0.3s ease;
-  margin-top: 1rem;
 }
 
 .signin-button:hover {
